rewrite some code

--- a/MyMauiApplication/Routes.razor
+++ b/MyMauiApplication/Routes.razor
@@ -1,6 +1,4 @@
-﻿@using RazorLibrary.Elements;
-
-<CascadingAuthenticationState>
+﻿<CascadingAuthenticationState>
     <Router AppAssembly="@typeof(MauiProgram).Assembly">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(Components.Layout.MainLayout)">
