--- a/MyMauiApplication/_Imports.razor
+++ b/MyMauiApplication/_Imports.razor
@@ -9,6 +9,7 @@
 @using Microsoft.JSInterop
 @using MyMauiApplication
 @using MyMauiApplication.Services;
-
-@using RazorLibrary.Pages
 @using Library.IServices;
+@using RazorLibrary.Pages;
+@using RazorLibrary.Elements;
+@using RazorLibrary.Elements.Veil;
