--- a/RazorLibrary/Pages/Account.razor
+++ b/RazorLibrary/Pages/Account.razor
@@ -24,7 +24,7 @@
         </div>
 
         <div class="history outer-wrapper">
-            <div class="title">Transaction history</div>
+            <div class="title">Transactions history</div>
             <TransactionsHistory />
         </div>
 
